src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Same</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uplift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STR_SUPPL1__c</fullName>
        <label>STR_SUPPL1</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_SUPPL2__c</fullName>
        <label>STR_SUPPL2</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_SUPPL3__c</fullName>
        <label>STR_SUPPL3</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Email__c</fullName>
        <description>Sales Engineer Email from BaaN</description>
        <label>Sales Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Cust_No__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Ship To&quot;), Address_Code__c &amp; &quot; &quot; &amp; &quot;/&quot; &amp; &quot; &quot; &amp; Related_Customer__r.Customer_Number__c, &quot;&quot;)</formula>
        <label>Ship To/Cust No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ExtID__c</fullName>
        <externalId>true</externalId>
        <label>Ship To ExtID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Normal Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doubtful Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Hold/Block</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summit_Acct_ID__c</fullName>
        <label>Summit Acct ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summit_Acct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summit Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_of_Delivery_Code__c</fullName>
        <description>BaaN integration</description>
        <label>Terms of Delivery Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Delivery_Desc__c</fullName>
        <description>BaaN Integration</description>
        <label>Terms of Delivery Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Code__c</fullName>
        <description>Customer Master</description>
        <label>Terms of Payment Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Desc__c</fullName>
        <label>Terms of Payment Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportation Zone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Transportation Zone - TZ</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Transportation Zone)</relationshipLabel>
        <relationshipName>Transportation_Zone</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Americas_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Customer_Number__c</columns>
        <columns>Company_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Americas Accounts</label>
        <sharedTo>
            <group>Americas_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Americas_Prospect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Ship To</value>
        </filters>
        <label>Americas Prospect (Not Ship To)</label>
        <sharedTo>
            <group>Americas_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Americas_Ship_To_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filters>
        <label>Americas Ship To Accounts</label>
        <sharedTo>
            <group>Americas_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEAS_Prospect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012410000012b9K</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>EMEAS Prospect</label>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SAP_Ship_To__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>SAP_Customer_Id__c</columns>
        <columns>MP_Distribution_Channel__c</columns>
        <columns>MP_Industry__c</columns>
        <columns>RP_Distribution_Channel__c</columns>
        <columns>RP_Industry__c</columns>
        <columns>AD_Distribution_Channel__c</columns>
        <columns>AD_Industry__c</columns>
        <columns>EMEA_JSON_Date_Time__c</columns>
        <columns>EMEA_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Customer_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>EMEA_JSON_Date_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EMEA Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_EAS_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>SAP_Customer_Id__c</columns>
        <columns>AD_Industry__c</columns>
        <columns>AD_Distribution_Channel__c</columns>
        <columns>AD_Business_Area__c</columns>
        <columns>MP_Industry__c</columns>
        <columns>MP_Distribution_Channel__c</columns>
        <columns>MP_Business_Area__c</columns>
        <columns>RP_Industry__c</columns>
        <columns>RP_Distribution_Channel__c</columns>
        <columns>EMEA_JSON_Date_Time__c</columns>
        <columns>EMEA_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Customer_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>EMEA_JSON_Date_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>AD_Industry__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EMEA EAS Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_MP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>SAP_Customer_Id__c</columns>
        <columns>MP_Industry__c</columns>
        <columns>MP_Distribution_Channel__c</columns>
        <columns>MP_Business_Area__c</columns>
        <columns>RP_Industry__c</columns>
        <columns>RP_Distribution_Channel__c</columns>
        <columns>AD_Industry__c</columns>
        <columns>AD_Distribution_Channel__c</columns>
        <columns>AD_Business_Area__c</columns>
        <columns>EMEA_JSON_Date_Time__c</columns>
        <columns>EMEA_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Customer_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>EMEA_JSON_Date_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MP_Industry__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EMEA MP Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Prospect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>EMEA Prospect</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_RP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>SAP_Customer_Id__c</columns>
        <columns>MP_Industry__c</columns>
        <columns>MP_Distribution_Channel__c</columns>
        <columns>MP_Business_Area__c</columns>
        <columns>RP_Industry__c</columns>
        <columns>RP_Distribution_Channel__c</columns>
        <columns>AD_Industry__c</columns>
        <columns>AD_Distribution_Channel__c</columns>
        <columns>AD_Business_Area__c</columns>
        <columns>EMEA_JSON_Date_Time__c</columns>
        <columns>EMEA_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Customer_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>EMEA_JSON_Date_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RP_Industry__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EMEA RP Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>A financially approved account with a customer # in an ERP</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>A prospective account that does not have financial approval or ship to account (Baan only)</description>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Accounts_Not_Edit_Ship_Tos</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.Id &lt;&gt;  $Label.Integration_User_ID,
ISPICKVAL(Type, &apos;Ship To&apos;),
OR(
ISCHANGED( Name ), 
ISCHANGED( Related_Customer__c  ),
ISCHANGED(  BillingStreet  ),
ISCHANGED(  BillingCity  ),
ISCHANGED(  BillingState  ),
ISCHANGED(  BillingPostalCode  ),
ISCHANGED(  BillingCountry  )
))</errorConditionFormula>
        <errorMessage>Account Name and Address cannot be edited when an account is designated as a Ship To Only Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Accounts_AccountName_ReadOnly</fullName>
        <active>true</active>
        <description>If the type is &quot;customer,&quot; users should not be able to edit the account name field. Standard Salesforce functionality does not allow a &quot;Read Only&quot; on that field, so we are using a validation rule instead.</description>
        <errorConditionFormula>AND( 
OR(NOT(ISBLANK(Customer_Number__c)),
			NOT(ISBLANK(SAP_Customer_Id__c))
		), 
ISCHANGED( Name ), 
$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_Integration, 
$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_System_Administrator,
$User.ProfileId &lt;&gt; $Label.Profile_ID_System_Administrator 

)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name cannot be edited in Salesforce on Customer accounts integrated from BaaN or SAP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EMEA_Prospect_Required_Field_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
				RecordTypeId = $Label.Account_Record_Type_Prospect , 
				CONTAINS(TEXT($User.SBU__c), &apos;EMEA&apos;), 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_Integration, 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_System_Administrator, 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_System_Administrator,
				OR( 
								ISBLANK(BillingCity), 
								ISBLANK(BillingCountry),
								AND(
												AND(
																ISBLANK( TEXT( MP_Industry__c )) , 
																ISBLANK( TEXT( MP_Distribution_Channel__c )),
																ISBLANK( TEXT( MP_Business_Area__c ))),
												AND(
																ISBLANK( TEXT( RP_Industry__c )), 
																ISBLANK( TEXT( RP_Distribution_Channel__c))),
												AND(
																ISBLANK( TEXT( AD_Industry__c)),
																ISBLANK( TEXT( AD_Distribution_Channel__c )),
																ISBLANK( TEXT( AD_Business_Area__c)))
												)
								)
				)</errorConditionFormula>
        <errorMessage>Please fill in the City, Country, and Classifications for the account prior to Saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Users_from_Editing_National</fullName>
        <active>true</active>
        <description>Prevents certain Roles and Profiles from editing the National checkbox.</description>
        <errorConditionFormula>AND( 
ISCHANGED( National__c ) 
,
AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;EnerSys Integration&apos;, 
$Profile.Name &lt;&gt; &apos;EnerSys System Administrator&apos;, 
$UserRole.Name &lt;&gt; &apos;EnerSys Delaware Inc.&apos;, 
$UserRole.Name &lt;&gt; &apos;Worldwide&apos;, 
$UserRole.Name &lt;&gt; &apos;MP - Americas NA Support&apos;, 
$UserRole.Name &lt;&gt; &apos;MP - Americas&apos;, 
$UserRole.Name &lt;&gt; &apos;RP - Americas NA Support&apos;, 
$UserRole.Name &lt;&gt; &apos;RP - Americas&apos; 
)
)</errorConditionFormula>
        <errorDisplayField>National__c</errorDisplayField>
        <errorMessage>You cannot modify the National field.</errorMessage>
    </validationRules>
</CustomObject>